# CviCubeMX

./: CHIP_SPECS.md  CMakeLists.txt  DMA_CONFIG_GUIDE.md  FLASH_CONFIG_GUIDE.md  PATH_SELECTION_FEATURE.md  PERIPHERAL_CHECKBOX_FEATURE.md  PERIPHERAL_CONFIG_UPDATE.md  QUICKSTART.md  README.md  SEARCH_FEATURE.md  build.bat  build.sh  deploy.bat  fix_dll.bat
boards/cv184x/cv1842hp_wevb_0014a_emmc/linux/: cvitek_cv1842hp_wevb_0014a_emmc_defconfig
boards/cv184x/cv1842hp_wevb_0014a_emmc/u-boot/: cvi_board_init.c  cvitek_cv1842hp_wevb_0014a_emmc_defconfig
boards/default/dts/cv184x/: cv184x_asic_bga.dtsi  cv184x_asic_qfn.dtsi  cv184x_base.dtsi
boards/default/dts/cv184x_arm/: cv184x_base_arm.dtsi
boards_pinout/: README.md  generate_pins.py
boards_pinout/cv184x/: CV184xC__PINOUT_V13_CN.xlsx  CV184xH__PINOUT_V13_CN.xlsx
include/: cvi_board_init.h  pinfunction.h  pinmux.h
resources/: style.qss
src/: aichatdialog.cpp  aichatdialog.h  chipconfig.cpp  chipconfig.h  clockconfig.cpp  clockconfig.h  codegenerator.cpp  codegenerator.h  dtsconfig.cpp  dtsconfig.h  flashconfig.cpp  flashconfig.h  mainwindow.cpp  mainwindow.h  memoryconfig.cpp  memoryconfig.h  peripheralconfigdialog.cpp  peripheralconfigdialog.h  pinfunction.cpp  pinwidget.cpp  pinwidget.h
